<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.dazzleconf</groupId>
	<artifactId>dazzleconf-parent</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>DazzleConf</name>
	<description>Incredible! The ultimate configuration solution.</description>
	<url>https://github.com/A248/DazzleConf</url>
	<inceptionYear>2020</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>5.6.2</junit.version>
	</properties>
	
	<scm>
		<connection>scm:git:git://github.com/A248/DazzleConf.git</connection>
		<developerConnection>scm:git:ssh://github.com:A248/DazzleConf.git</developerConnection>
		<url>http://github.com/A248/DazzleConf/tree/master</url>
	</scm>
	
	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<url>https://www.arim.space</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<distributionManagement>
		<repository>
			<id>cloudsmith-deploy</id>
			<url>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</url>
		</repository>
		<snapshotRepository>
			<id>cloudsmith-deploy</id>
			<url>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</url>
		</snapshotRepository>
	</distributionManagement>
	
	<build>
		<plugins>
			<!-- Sources and javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<source>8</source>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>aggregate</goal>
							<goal>aggregate-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!-- JAR creation -->
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
					<executions>
						<execution>
							<id>default-compile</id>
							<configuration>
								<release>11</release>
							</configuration>
						</execution>
						<execution>
							<id>base-compile</id>
							<goals>
								<goal>compile</goal>
							</goals>
							<configuration>
								<excludes>
									<exclude>module-info.java</exclude>
								</excludes>
							</configuration>
						</execution>
						<execution>
							<id>default-testCompile</id>
							<configuration>
								<source>11</source>
								<target>11</target>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<!-- Testing -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<trimStackTrace>false</trimStackTrace>
						<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
						<dependencies>
							<dependency>
								<groupId>org.junit.jupiter</groupId>
								<artifactId>junit-jupiter-engine</artifactId>
								<version>${junit.version}</version>
							</dependency>
						</dependencies>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<modules>
		<module>core</module>
		<module>gson</module>
		<module>snakeyaml</module>
	</modules>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>space.arim.dazzleconf</groupId>
				<artifactId>dazzleconf-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>